--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,84 @@
-article,aside,details,figcaption,figure,footer,header,hgroup,nav,section{display:block}audio,canvas,video{display:inline-block;*display:inline;*zoom:1}audio:not([controls]){display:none}[hidden]{display:none}html{font-size:100%;overflow-y:scroll;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}body{margin:0;font-size:13px;line-height:1.231}body,button,input,select,textarea{font-family:sans-serif;color:#222}::-moz-selection{background:#fe57a1;color:#fff;text-shadow:none}::selection{background:#fe57a1;color:#fff;text-shadow:none}a{color:#00e}a:visited{color:#551a8b}a:hover{color:#06e}a:focus{outline:thin dotted}a:hover,a:active{outline:0}abbr[title]{border-bottom:1px dotted}b,strong{font-weight:bold}blockquote{margin:1em 40px}dfn{font-style:italic}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}ins{background:#ff9;color:#000;text-decoration:none}mark{background:#ff0;color:#000;font-style:italic;font-weight:bold}pre,code,kbd,samp{font-family:monospace, monospace;_font-family:'courier new', monospace;font-size:1em}pre{white-space:pre;white-space:pre-wrap;word-wrap:break-word}q{quotes:none}q:before,q:after{content:"";content:none}small{font-size:85%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sup{top:-0.5em}sub{bottom:-0.25em}ul,ol{margin:1em 0;padding:0 0 0 40px}dd{margin:0 0 0 40px}nav ul,nav ol{list-style:none;list-style-image:none;margin:0;padding:0}img{border:0;-ms-interpolation-mode:bicubic;vertical-align:middle}svg:not(:root){overflow:hidden}figure{margin:0}form{margin:0}fieldset{border:0;margin:0;padding:0}label{cursor:pointer}legend{border:0;*margin-left:-7px;padding:0}button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline;*vertical-align:middle}button,input{line-height:normal;*overflow:visible}table button,table input{*overflow:auto}button,input[type="button"],input[type="reset"],input[type="submit"]{cursor:pointer;-webkit-appearance:button}input[type="checkbox"],input[type="radio"]{box-sizing:border-box}input[type="search"]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type="search"]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top;resize:vertical}input:invalid,textarea:invalid{background-color:#f0dddd}table{border-collapse:collapse;border-spacing:0}td{vertical-align:top}body,select,input,textarea{color:#222}.ir{background-color:transparent;background-repeat:no-repeat;border:0;direction:ltr;display:block;overflow:hidden;text-align:left;text-indent:-999em}.ir br{display:none}.hidden{display:none !important;visibility:hidden}.visuallyhidden{border:0;clip:rect(0 0 0 0);height:1px;margin:-1px;overflow:hidden;padding:0;position:absolute;width:1px}.visuallyhidden.focusable:active,.visuallyhidden.focusable:focus{clip:auto;height:auto;margin:0;overflow:visible;position:static;width:auto}.invisible{visibility:hidden}.clearfix{zoom:1}.clearfix:before,.clearfix:after{content:"";display:table}.clearfix:after{clear:both}@media print{*{background:transparent !important;color:black !important;text-shadow:none !important;filter:none !important;-ms-filter:none !important}a,a:visited{text-decoration:underline}a[href]:after{content:" (" attr(href) ")"}abbr[title]:after{content:" (" attr(title) ")"}.ir a:after,a[href^="javascript:"]:after,a[href^="#"]:after{content:""}pre,blockquote{border:1px solid #999;page-break-inside:avoid}thead{display:table-header-group}tr,img{page-break-inside:avoid}img{max-width:100% !important}@page{margin:0.5cm}p,h2,h3{orphans:3;widows:3}h2,h3{page-break-after:avoid}}
+/*
+Syntax error: File to import not found or unreadable: partials/base.
+              Load paths:
+                /Users/albertmartin/Sites/TheBLOCK/sites/all/themes/theblock/sass
+                /Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets
+                /Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/compass/stylesheets
+                /Applications/compass.app/Contents/Resources/ruby/compass_extensions/compass-960-plugin-f4bfe8555a7d2cae09bc/stylesheets
+                /Applications/compass.app/Contents/Resources/ruby/compass_extensions/heygrady-compass-html5-boilerplate-4cc8815/stylesheets
+                /Applications/compass.app/Contents/Resources/ruby/compass_extensions/compass-h5bp/stylesheets
+                Compass::SpriteImporter
+        on line 2 of /Users/albertmartin/Sites/TheBLOCK/sites/all/themes/theblock/sass/style.scss
+
+1: /Users/albertmartin/Sites/TheBLOCK/sites/all/themes/theblock/sass/style.scss
+
+Backtrace:
+/Users/albertmartin/Sites/TheBLOCK/sites/all/themes/theblock/sass/style.scss:2
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/import_node.rb:64:in `import'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/import_node.rb:62:in `import'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/import_node.rb:25:in `imported_file'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/visitors/perform.rb:149:in `visit_import'
+org/jruby/RubyKernel.java:2080:in `send'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/visitors/base.rb:37:in `visit'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/visitors/perform.rb:18:in `visit'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+org/jruby/RubyArray.java:2331:in `collect'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/visitors/base.rb:53:in `visit_children'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/visitors/perform.rb:27:in `visit_children'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/visitors/perform.rb:39:in `with_environment'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/visitors/perform.rb:26:in `visit_children'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/visitors/base.rb:37:in `visit'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/visitors/perform.rb:47:in `visit_root'
+org/jruby/RubyKernel.java:2080:in `send'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/visitors/base.rb:37:in `visit'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/visitors/perform.rb:18:in `visit'
+org/jruby/RubyKernel.java:2080:in `send'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/visitors/perform.rb:7:in `visit'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/tree/root_node.rb:20:in `render'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/engine.rb:299:in `_render'
+/Applications/compass.app/Contents/Resources/ruby/compass_common/sass-3.1.15/lib/sass/engine.rb:246:in `render'
+src/compass_patch.rb:139:in `compile'
+/Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/lib/compass/compiler.rb:126:in `timed'
+src/compass_patch.rb:138:in `compile'
+/Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/lib/compass/logger.rb:45:in `red'
+src/compass_patch.rb:137:in `compile'
+/Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/lib/compass/compiler.rb:118:in `compile_if_required'
+/Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/lib/compass/compiler.rb:103:in `run'
+org/jruby/RubyArray.java:1615:in `each'
+/Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/lib/compass/compiler.rb:101:in `run'
+/Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/lib/compass/compiler.rb:126:in `timed'
+/Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/lib/compass/compiler.rb:100:in `run'
+/Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/lib/compass/commands/watch_project.rb:147:in `recompile'
+org/jruby/RubyMethod.java:133:in `call'
+org/jruby/RubyProc.java:270:in `call'
+org/jruby/RubyProc.java:220:in `call'
+/Applications/compass.app/Contents/Resources/ruby/jruby/fssm-dbb37bba/lib/fssm/path.rb:73:in `run_callback'
+/Applications/compass.app/Contents/Resources/ruby/jruby/fssm-dbb37bba/lib/fssm/path.rb:55:in `callback_action'
+/Applications/compass.app/Contents/Resources/ruby/jruby/fssm-dbb37bba/lib/fssm/path.rb:35:in `update'
+/Applications/compass.app/Contents/Resources/ruby/jruby/fssm-dbb37bba/lib/fssm/state/directory.rb:39:in `modified'
+org/jruby/RubyArray.java:1615:in `each'
+/Applications/compass.app/Contents/Resources/ruby/jruby/fssm-dbb37bba/lib/fssm/state/directory.rb:37:in `modified'
+/Applications/compass.app/Contents/Resources/ruby/jruby/fssm-dbb37bba/lib/fssm/state/directory.rb:18:in `refresh'
+/Applications/compass.app/Contents/Resources/ruby/jruby/fssm-dbb37bba/lib/fssm/backends/rbfsevent.rb:30:in `temporary_multipath_handler'
+org/jruby/RubyArray.java:1615:in `each'
+/Applications/compass.app/Contents/Resources/ruby/jruby/fssm-dbb37bba/lib/fssm/backends/rbfsevent.rb:27:in `temporary_multipath_handler'
+/Applications/compass.app/Contents/Resources/ruby/jruby/fssm-dbb37bba/lib/fssm/backends/rbfsevent.rb:17:in `run'
+org/jruby/RubyArray.java:1615:in `each'
+/Applications/compass.app/Contents/Resources/ruby/jruby/fssm-dbb37bba/lib/fssm/backends/rbfsevent.rb:16:in `run'
+org/jruby/RubyProc.java:270:in `call'
+org/jruby/RubyProc.java:220:in `call'
+/Applications/compass.app/Contents/Resources/ruby/jruby/rb-fsevent-0.4.0/lib/rb-fsevent/fsevent.rb:38:in `run'
+/Applications/compass.app/Contents/Resources/ruby/jruby/fssm-dbb37bba/lib/fssm/backends/rbfsevent.rb:20:in `run'
+/Applications/compass.app/Contents/Resources/ruby/jruby/fssm-dbb37bba/lib/fssm/monitor.rb:26:in `run'
+/Applications/compass.app/Contents/Resources/ruby/jruby/fssm-dbb37bba/lib/fssm.rb:20:in `monitor'
+src/compass_patch.rb:38:in `perform'
+/Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/lib/compass/commands/base.rb:18:in `execute'
+/Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/lib/compass/commands/project_base.rb:19:in `execute'
+src/ui/tray.rb:399:in `watch'
+org/jruby/RubyProc.java:270:in `call'
+org/jruby/RubyProc.java:224:in `call'
+*/
+body:before {
+  white-space: pre;
+  font-family: monospace;
+  content: "Syntax error: File to import not found or unreadable: partials/base.\A               Load paths:\A                 /Users/albertmartin/Sites/TheBLOCK/sites/all/themes/theblock/sass\A                 /Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/blueprint/stylesheets\A                 /Applications/compass.app/Contents/Resources/ruby/compass_0.12/compass-0.12.1/frameworks/compass/stylesheets\A                 /Applications/compass.app/Contents/Resources/ruby/compass_extensions/compass-960-plugin-f4bfe8555a7d2cae09bc/stylesheets\A                 /Applications/compass.app/Contents/Resources/ruby/compass_extensions/heygrady-compass-html5-boilerplate-4cc8815/stylesheets\A                 /Applications/compass.app/Contents/Resources/ruby/compass_extensions/compass-h5bp/stylesheets\A                 Compass::SpriteImporter\A         on line 2 of /Users/albertmartin/Sites/TheBLOCK/sites/all/themes/theblock/sass/style.scss\A \A 1: /Users/albertmartin/Sites/TheBLOCK/sites/all/themes/theblock/sass/style.scss"; }
