--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -39,6 +39,24 @@ $font-serif: Georgia, serif;
 	a { text-decoration: none; &:hover { text-decoration: underline; } }
 }
 
+/* Button Dark: H33 S7 L30 */
+.btn-dark {
+  background-color: hsl(33, 7%, 20%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#6d665e", endColorstr="#36332f");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#6d665e), to(#36332f));
+  background-image: -moz-linear-gradient(top, #6d665e, #36332f);
+  background-image: -ms-linear-gradient(top, #6d665e, #36332f);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #6d665e), color-stop(100%, #36332f));
+  background-image: -webkit-linear-gradient(top, #6d665e, #36332f);
+  background-image: -o-linear-gradient(top, #6d665e, #36332f);
+  background-image: linear-gradient(#6d665e, #36332f);
+  border-color: #36332f #36332f hsl(33, 7%, 15%);
+  color: #fff !important;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.33);
+  -webkit-font-smoothing: antialiased;
+}
+
 /* HTML */
 
 body {
