--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -2509,6 +2509,24 @@ a.jcarousel-viewall {
 	@media only screen and (min-width:481px) and (max-width:768px) { width: 560px; }
 }
 
+/* Table Styling */
+
+table, thead, tbody, tr, th, td {
+  border-color: #524d47;
+}
+
+tbody tr {
+  border-top: 1px solid #524d47;
+}
+
+.node-type-article table p {
+  margin: 0;
+}
+
+tr.info, tr.even, tr:nth-child(2n+2) {
+  background: #524d47;
+}
+
 /* Forum Styling */
 
 .not-logged-in .topic-reply-link { display: none; }
