--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -4320,6 +4320,10 @@ fieldset .filter-help {
 }
 
 /* BUEditor Popup Menu Tables */
+#bue-dialog {
+  border: 1px solid;
+  border-color: #211e1b;
+}
 .bue-popup {
   /* BUEditor Popup Container */
   z-index: 10;
@@ -4337,8 +4341,6 @@ fieldset .filter-help {
   margin: 0;
   padding: 0;
   border: none;
-  border-color: #211e1b;
-  border: 1px solid;
   background-color: #302c29;
 }
 .bue-popup-head {
